--- a/week-1/00_starter-kit/index.html
+++ b/week-1/00_starter-kit/index.html
@@ -10,22 +10,22 @@
   <section id="container">
 
     <!-- about me-->
-    <h1>[your name]</h1> 
-    <h2>  </h2> 
+    <h1>[your name]</h1>
+    <h2>  </h2>
     <p class="desc">about you...</p>
-    
+
     <!-- links to my work -->
     <div id="exercises">
       <h3>Exercises</h3>
       <ul>
         <li><a href="#">EX 1</a></li>
-      </ul> 
+      </ul>
     </div>
-   
+
     <div id="projects">
       <h3>Projects</h3>
       <ul>
-        <li><a href="#">P1</a></li>
+        <li><a href="webtype/project1/index.html">P1</a></li>
       </ul>
     </div>
 
