--- a/week-1/00_starter-kit/index.html
+++ b/week-1/00_starter-kit/index.html
@@ -25,7 +25,7 @@
     <div id="projects">
       <h3>Projects</h3>
       <ul>
-        <li><a href="webtype/project1/index.html">P1</a></li>
+        <li><a href="project1/index.html">P1</a></li>
       </ul>
     </div>
 
